JumpScript/tests/baselines/reference/parserExportAssignment3.errors.txt
tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment3.jump(1,9): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment3.jump (1 errors) ====
    export =
            
!!! error TS1109: Expression expected.